# kelp-claw

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile.api  Dockerfile.openclaw  FINAL-PLAN-HACKATHON.md  FINAL-PROMPTS.md  HIGHER-LEVEL-GOALS.md  IDEA1-DOCUMENT.md  LICENSE  PHASE-3-KELP-REWRITE.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  todo1.md  todo10.md  todo2.md  todo3.md  todo4.md  todo5.md  todo6.md  todo7.md  todo8.md  todo9.md  tsconfig.base.json
.github/workflows/: ci.yml  publish-container.yml  publish-pypi.yml  release-smoke.yml
SUBMISSION/: demo-script.md  devpost-try-it-out.md
apps/api/: package.json
apps/kelpclaw/: vite.config.ts
apps/openclaw/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
data/: cve_functions.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_WAVES.md  PHASE_25_ADVANCED_REPORTING.md  agent-runtime-demo.md  ai-operator-control-policy.md  ai-redaction.md  analyst-study.md  attack-path-evidence-import.md  c2-log-import.md  capabilities.md  chain-of-custody.md  ci-integration.md  ci-lanes.md  client-outcome-view.md  community-benchmarks.md  communitytools-workflow-port.md  comparison.md  configuration.md  container-kubernetes.md  deployment.md  detection-opportunity-matrix.md  docker.md  enterprise-demand-gate.md  enterprise-demand-intake-template.md  enterprise-siem-support-requirements.md  enterprise-sso-rbac-requirements.md  getting-started.md  host-posture.md  integrations.md  known-limitations.json  local-ui.md  measurable-events-mode.md  metasploit-ingest.md  nessus-ingest.md  netexec-crackmapexec-import-gate.md  non-goals.md  nuclei-ingest.md  operator-debrief-workflow.md  pentest-report-schema.md  pentest-workspace.md  (+20 more)
docs/ci-templates/: github-actions-piranesi.yml  gitlab-ci-piranesi.yml
docs/examples/: nodegoat.md  vuln-express.md
docs/rfcs/: rescan-execution-layer.md
docs/tracks/: track-c-to-do.md  track-g-to-do.md
docs/validation/: phase1-local-lab-2026-05-17.md
eval/: active_learn.py  benchmark_mapping_report.py  coverage_gap_report.py  extract_fixture.py  fixture_validation.py  ground_truth_audit.py  scoring.py  train_classifier.py  validate_all.py  validate_fixture.py
eval/benchmarks/: mapping_matrix.yaml
eval/cve_fixtures/: cwe1336-CVE-2026-22244-openmetadata-freemarker-vuln.java  cwe1336-CVE-2026-25731-calibre-templite-safe.py  cwe1336-CVE-2026-25731-calibre-templite-vuln.py  cwe1336-CVE-2026-33154-dynaconf-jinja-safe.py  cwe1336-CVE-2026-33154-dynaconf-jinja-vuln.py  cwe22-CVE-2014-6394-send-root-prefix-fixed.ts  cwe22-CVE-2014-6394-send-root-prefix-vuln.ts  cwe22-CVE-2018-1002203-unzipper-zip-slip-fixed.ts  cwe22-CVE-2018-3712-serve-working-directory-fixed.ts  cwe22-CVE-2018-3712-serve-working-directory-vuln.ts  cwe22-CVE-2026-24842-node-tar-hardlink-fixed.ts  cwe287-CVE-2022-24857-django-mfa3-admin-bypass-safe.py  cwe295-CVE-2016-10536-engineio-rejectunauthorized-vuln.js  cwe295-CVE-2020-15720-dogtag-pki-verify-false-vuln.py  cwe295-CVE-2021-31597-xmlhttprequest-ssl-vuln.js  cwe327-CVE-2023-46133-cryptoes-pbkdf2-safe.js  cwe327-CVE-2023-46133-cryptoes-pbkdf2-vuln.js  cwe327-CVE-2023-46233-cryptojs-pbkdf2-safe.js  cwe327-CVE-2023-46233-cryptojs-pbkdf2-vuln.js  cwe338-CVE-2019-11808-ratpack-sessionid-safe.java  cwe338-CVE-2019-11808-ratpack-sessionid-vuln.java  cwe338-CVE-2019-16303-jhipster-resetkey-vuln.java  cwe338-CVE-2022-36045-nodebb-resetcode-safe.js  cwe338-CVE-2022-36045-nodebb-resetcode-vuln.js  cwe352-CVE-2021-21241-flask-security-token-get-safe.py  cwe352-CVE-2021-21241-flask-security-token-get-vuln.py  cwe352-CVE-2023-27495-fastify-csrf-bypass-safe.js  cwe352-CVE-2023-27495-fastify-csrf-bypass-vuln.js  cwe502-CVE-2018-14718-jackson-defaulttyping-safe.java  cwe502-CVE-2018-14718-jackson-defaulttyping-vuln.java  cwe502-CVE-2021-21249-onedev-yaml-safe.java  cwe502-CVE-2021-21249-onedev-yaml-vuln.java  cwe502-CVE-2021-41110-cwlviewer-yaml-safe.java  cwe502-CVE-2023-51389-hertzbeat-define-yml-safe.java  cwe78-CVE-2020-7730-bestzip-native-zip-fixed.ts  cwe78-CVE-2020-7730-bestzip-native-zip-vuln.ts  cwe78-CVE-2022-24066-simple-git-upload-pack-vuln.ts  cwe78-CVE-2023-42810-systeminformation-ssid-linux-fixed.ts  cwe78-CVE-2024-56334-systeminformation-ssid-windows-fixed.ts  cwe78-CVE-2024-56334-systeminformation-ssid-windows-vuln.ts  (+21 more)
eval/ground_truth/: gt-145.yaml  gt-146.yaml  gt-147.yaml  gt-148.yaml  gt-149.yaml  gt-150.yaml  gt-151.yaml  gt-152.yaml  gt-153.yaml  gt-154.yaml  gt-155.yaml  gt-156.yaml  gt-157.yaml  gt-158.yaml  gt-159.yaml  gt-160.yaml  gt-161.yaml  gt-162.yaml  gt-163.yaml  gt-164.yaml  gt-165.yaml  (+377 more)
legacy/: README.md
scripts/: check-codegen-policy.mjs  check_environment_markers.py  check_known_limitations.py  check_release_hygiene.py  check_release_tag.py  check_rollout_gates.py  ci_preflight.py  host_smoke_check.sh  link-cli-bin.mjs  live-smoke.mjs  refresh_cve_functions.py  validate-workflow-fixtures.mjs  validate_pentest_fixtures.py
tests/: test_ai_redaction.py  test_audit.py  test_c2_ingest.py  test_calibration.py  test_ci_templates.py  test_cli.py  test_cli_contract.py  test_contract_snapshots.py  test_cwe_metadata.py  test_deferred_adapter_expansion_docs.py  test_detections.py  test_docker_artifact.py  test_enterprise_demand_gate_docs.py  test_environment_marker_policy.py  test_evidence_model.py  test_example_rule_packs.py  test_exporters.py  test_higher_level_goals_docs.py  test_hooks_pre_commit.py  test_host_benchmark.py  test_host_posture.py  test_k8s_posture.py  test_known_limitations_registry.py  test_launcher_tui.py  test_metasploit_ingest.py  test_nessus_ingest.py  test_nmap_ingest.py  test_nuclei_ingest.py  test_observability.py  test_pentest_fixtures.py  test_pentest_report.py  test_pff_schema.py  test_pipeline_run.py  test_plugin_security_model.py  test_redteam_report.py  test_report_qa.py  test_report_renderer.py  test_rescan_cli.py  test_rescan_harness.py  test_rollout_gate_policy.py  (+9 more)
(+1904 files in other folders)
