[project]
name = "piranesi"
version = "0.2.0"
description = "CLI-native cybersecurity analysis tool for TypeScript/JavaScript source code"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "piranesi contributors" }]
keywords = ["security", "typescript", "javascript", "sast", "static-analysis", "owasp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0.0",
    "z3-solver>=4.12.0",
    "litellm>=1.30.0",
    "tenacity>=9.0.0",
    "docker>=7.0.0",
    "requests>=2.32.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/gongahkia/piranesi"
Repository = "https://github.com/gongahkia/piranesi"
Issues = "https://github.com/gongahkia/piranesi/issues"
Documentation = "https://github.com/gongahkia/piranesi/tree/main/docs"

[project.scripts]
piranesi = "piranesi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".claude/**",
    ".venv/**",
    ".mypy_cache/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    ".piranesi-out/**",
    "piranesi-output/**",
    "workspace/**",
    "CLAUDE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/piranesi"]

[dependency-groups]
dev = [
    "jsonschema>=4.23.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "types-docker>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "docker: marks tests covering Docker sandbox lifecycle and hardening",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "joern: marks tests requiring a local Joern installation",
    "e2e: marks live end-to-end tests requiring Joern and Docker",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = ["tests/fixtures/python/"]

[[tool.mypy.overrides]]
module = ["jsonschema"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["piranesi"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
